compute/compute.tf
resource "aws_security_group" "test_sg" {
    name = "${var.name_prefix}-asg-sg"
    description = "test-sg"
    vpc_id = var.vpc_id

    ingress {
        cidr_blocks = [ "0.0.0.0/0" ]
        from_port = 22
        to_port = 22
        protocol = "tcp"
    }

    ingress {
        cidr_blocks = [ "0.0.0.0/0" ]
        from_port = 80
        to_port = 80
        protocol = "http"
    }

    egress {
        from_port = 0
        to_port = 0
        cidr_blocks = [ "0.0.0.0/0" ]
        protocol = "-1"
    }

  
}

resource "aws_launch_template" "test_lt" {
   name_prefix = "${var.name_prefix}-lt"
   image_id = var.image_id
   instance_type = var.instance_type
   security_group_names = [ aws_security_group.test_sg.id ]

   block_device_mappings {
     device_name = "/dev/xvda"
     ebs {
       volume_size = var.volume_size
       volume_type = "gp3"
       delete_on_termination = true
     }
   }  
}

resource "aws_autoscaling_group" "test_Asg" {
    name = "${var.name_prefix}-asg"
    min_size = var.min_size
    max_size = var.max_size
    desired_capacity = var.desired_capacity
    vpc_zone_identifier = var.subnet_ids
    health_check_type = "EC2"
    force_delete = true
    wait_for_capacity_timeout = "0"

    launch_template {
      version = "$LATEST"
      id = aws_launch_template.test_lt.id
    }

    tag {
      key = "Name"
      value = "${var.name_prefix}-instance"
      propagate_at_launch = true
    }
  
}
